Fix vertical alignment of paginator on ie11

--- a/core/static/core/sass/search.scss
+++ b/core/static/core/sass/search.scss
@@ -236,6 +236,7 @@ body:not(.js-enabled) {
     text-align: center;
     li {
       display: inline-block;
+      vertical-align: top;
       a {
         padding: 0;
         width: 50px;
